# vila

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: client.py  local.py  server.py
src/llava/model/: builder.py
src/llava/model/utils/: utils.py
