[project]
name = "vila"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.2.0",
    "deepspeed>=0.17.6",
    "fastapi>=0.117.1",
    "flash-attn>=2.8.3",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "ps3-torch>=0.1.1",
    "requests>=2.32.5",
    "s2wrapper",
    "torch>=2.8.0",
    "uvicorn>=0.37.0",
]

[tool.uv.sources]
s2wrapper = { git = "https://github.com/bfshi/scaling_on_scales" }


